--- a/eula.html
+++ b/eula.html
@@ -1,55 +1,104 @@
-**End User License Agreement (EULA)**
-**ReceiptProof**
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>EULA | ReceiptProof</title>
+  <meta name="description" content="End User License Agreement for ReceiptProof." />
+  <style>
+    :root { color-scheme: light dark; }
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Arial, sans-serif; margin: 0; line-height: 1.6; }
+    header, main, footer { max-width: 920px; margin: 0 auto; padding: 24px; }
+    header { padding-top: 40px; padding-bottom: 16px; }
+    h1 { font-size: 28px; margin: 0 0 8px; }
+    .meta { opacity: .75; margin: 0 0 24px; }
+    h2 { font-size: 18px; margin-top: 28px; }
+    a { color: inherit; }
+    .card { border: 1px solid rgba(127,127,127,.25); border-radius: 12px; padding: 16px; margin: 16px 0; }
+    ul { padding-left: 20px; }
+    footer { opacity: .75; padding-top: 8px; padding-bottom: 40px; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>End User License Agreement (EULA)</h1>
+    <p class="meta">
+      Product: <strong>ReceiptProof</strong><br/>
+      Last updated: <strong>[Insert Date]</strong>
+    </p>
+    <div class="card">
+      This EULA governs your use of the ReceiptProof App. If the Store provides a standard EULA, it may also apply.
+    </div>
+  </header>
 
-Last updated: [Insert Date]
+  <main>
+    <h2>1. License Grant</h2>
+    <p>
+      ReceiptProof grants you a limited, non-exclusive, non-transferable, revocable license to install and use the App
+      for personal, non-commercial purposes on devices you own or control, in accordance with this EULA and the Store rules.
+    </p>
 
-This End User License Agreement (“Agreement”) is a legal agreement between you (“User”) and ReceiptProof (“Company,” “we,” “us,” or “our”) governing your use of the ReceiptProof mobile application (“App”).
+    <h2>2. Ownership</h2>
+    <p>
+      The App and all intellectual property rights are owned by ReceiptProof and its licensors. This EULA does not grant you
+      ownership of the App.
+    </p>
 
-### 1. License Grant
+    <h2>3. Restrictions</h2>
+    <ul>
+      <li>You may not copy, modify, distribute, sell, rent, lease, or sublicense the App.</li>
+      <li>You may not reverse engineer, decompile, or attempt to extract source code except where permitted by law.</li>
+      <li>You may not bypass or interfere with the App’s security features.</li>
+      <li>You may not use the App for unlawful or fraudulent purposes.</li>
+    </ul>
 
-We grant you a limited, non-exclusive, non-transferable, and revocable license to use the App for personal, non-commercial purposes in accordance with this Agreement.
+    <h2>4. User Content</h2>
+    <p>
+      You retain ownership of your uploaded content (receipt images and metadata). You grant us a limited license to host,
+      process, and display your content solely to provide App functionality.
+    </p>
 
-### 2. Ownership
+    <h2>5. Updates</h2>
+    <p>
+      We may provide updates or changes to the App. Some updates may be required for continued use.
+    </p>
 
-The App, including all content, features, trademarks, and intellectual property, is owned by ReceiptProof. This Agreement does not transfer ownership rights to you.
+    <h2>6. No Warranty</h2>
+    <p>
+      The App is provided “as is” and “as available.” To the maximum extent permitted by law, we disclaim all warranties,
+      express or implied, including fitness for a particular purpose.
+    </p>
 
-### 3. Permitted Use
+    <h2>7. Limitation of Liability</h2>
+    <p>
+      To the maximum extent permitted by law, ReceiptProof will not be liable for damages arising from your use of the App,
+      including missed return deadlines, warranty claim issues, or lost data.
+    </p>
 
-You may use the App to:
+    <h2>8. Termination</h2>
+    <p>
+      This EULA is effective until terminated. It terminates automatically if you fail to comply with its terms.
+      Upon termination, you must stop using the App and delete it.
+    </p>
 
-* Store and manage receipts and purchase records
-* Track return periods and warranties
-* Receive reminders related to stored receipts
+    <h2>9. Governing Law</h2>
+    <p>
+      This EULA is governed by the laws applicable in your place of residence, unless otherwise required by mandatory local law.
+    </p>
 
-### 4. Restrictions
+    <h2>10. Contact</h2>
+    <p>
+      If you have any questions about this EULA, contact:<br/>
+      <a href="mailto:leonitkuleta@gmail.com">leonitkuleta@gmail.com</a>
+    </p>
+  </main>
 
-You may not:
+  <footer>
+    <p>© <span id="y"></span> ReceiptProof. All rights reserved.</p>
+  </footer>
 
-* Copy, modify, distribute, or reverse engineer the App
-* Use the App for unlawful or fraudulent purposes
-* Attempt to bypass security or access restrictions
-
-### 5. User Content
-
-You retain ownership of any receipts, images, or data you upload. You grant us permission to store and process this data solely to provide App functionality.
-
-### 6. No Warranty
-
-The App is provided “as is” and “as available.” We make no guarantees regarding accuracy, availability, or fitness for a particular purpose.
-
-### 7. Limitation of Liability
-
-To the maximum extent permitted by law, ReceiptProof shall not be liable for any damages resulting from your use or inability to use the App, including missed return deadlines or warranty claims.
-
-### 8. Termination
-
-We may suspend or terminate your access if you violate this Agreement. You may stop using the App at any time.
-
-### 9. Governing Law
-
-This Agreement is governed by the laws of your country of residence, unless otherwise required by applicable law.
-
-### 10. Contact
-
-For questions regarding this Agreement, contact:
-**[leonitkuleta@gmail.com](leonitkuleta@gmail.com)**
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
