--- a/terms.html
+++ b/terms.html
@@ -1,63 +1,131 @@
-**Terms & Conditions**
-**ReceiptProof**
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Terms & Conditions | ReceiptProof</title>
+  <meta name="description" content="Terms & Conditions for ReceiptProof." />
+  <style>
+    :root { color-scheme: light dark; }
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Arial, sans-serif; margin: 0; line-height: 1.6; }
+    header, main, footer { max-width: 920px; margin: 0 auto; padding: 24px; }
+    header { padding-top: 40px; padding-bottom: 16px; }
+    h1 { font-size: 28px; margin: 0 0 8px; }
+    .meta { opacity: .75; margin: 0 0 24px; }
+    h2 { font-size: 18px; margin-top: 28px; }
+    a { color: inherit; }
+    .card { border: 1px solid rgba(127,127,127,.25); border-radius: 12px; padding: 16px; margin: 16px 0; }
+    ul { padding-left: 20px; }
+    footer { opacity: .75; padding-top: 8px; padding-bottom: 40px; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Terms & Conditions</h1>
+    <p class="meta">
+      Product: <strong>ReceiptProof</strong><br/>
+      Last updated: <strong>[Insert Date]</strong>
+    </p>
+    <div class="card">
+      <strong>Important:</strong> ReceiptProof helps you store receipts and track deadlines, but you remain responsible for verifying
+      return and warranty policies with the merchant/manufacturer.
+    </div>
+  </header>
 
-Last updated: [Insert Date]
+  <main>
+    <h2>1. Agreement</h2>
+    <p>
+      These Terms & Conditions (“Terms”) govern your access to and use of ReceiptProof (the “App”).
+      By using the App, you agree to these Terms.
+    </p>
 
-By accessing or using ReceiptProof, you agree to these Terms & Conditions.
+    <h2>2. Service Description</h2>
+    <p>ReceiptProof provides tools to:</p>
+    <ul>
+      <li>Capture and store receipts and purchase details</li>
+      <li>Organize and search receipt records</li>
+      <li>Track return windows and warranty periods (based on information you provide)</li>
+      <li>Receive reminders and notifications (if enabled)</li>
+    </ul>
 
-### 1. Service Description
+    <h2>3. Accounts</h2>
+    <p>
+      You are responsible for your account activity and for keeping your login credentials secure.
+      You agree not to misuse the App or access it in an unauthorized manner.
+    </p>
 
-ReceiptProof allows users to digitally store receipts, track warranties and return deadlines, and receive reminders.
+    <h2>4. Subscriptions, Billing, and Purchases</h2>
+    <p>
+      Some features may require a paid subscription (“Subscription”). Purchases are processed by Apple App Store or Google Play.
+      Subscription terms are shown prior to purchase.
+    </p>
+    <ul>
+      <li><strong>Auto-renewal:</strong> Subscriptions renew unless canceled in your Store settings before the renewal date.</li>
+      <li><strong>Manage/cancel:</strong> You manage subscriptions in your Apple ID / Google account settings.</li>
+      <li><strong>Refunds:</strong> Refunds are handled by Apple/Google under their policies.</li>
+      <li><strong>Restore:</strong> You can restore purchases using the “Restore Purchases” option.</li>
+    </ul>
 
-### 2. Account Responsibility
+    <h2>5. Not a Retailer or Warranty Provider</h2>
+    <p>
+      ReceiptProof is not affiliated with retailers, manufacturers, or warranty providers. Receipt acceptance, return eligibility,
+      and warranty coverage are determined by the seller/manufacturer. We do not guarantee that any receipt will be accepted by a merchant.
+    </p>
 
-You are responsible for:
+    <h2>6. Your Content</h2>
+    <p>
+      You retain ownership of content you upload (e.g., receipt images and metadata). You grant us a limited license to host,
+      process, and display your content solely to provide the App.
+    </p>
 
-* Maintaining the confidentiality of your account
-* Ensuring uploaded data is accurate
-* All activity under your account
+    <h2>7. Prohibited Use</h2>
+    <ul>
+      <li>Do not upload illegal, infringing, or harmful content.</li>
+      <li>Do not reverse engineer, bypass, or interfere with the App’s security.</li>
+      <li>Do not use the App for unlawful, deceptive, or fraudulent purposes.</li>
+    </ul>
 
-### 3. Subscriptions & Payments
+    <h2>8. Availability and Changes</h2>
+    <p>
+      We may modify, suspend, or discontinue features at any time. We do not guarantee uninterrupted availability.
+    </p>
 
-Some features may require a paid subscription.
+    <h2>9. Disclaimer</h2>
+    <p>
+      The App is provided “as is” and “as available.” To the maximum extent permitted by law, we disclaim all warranties,
+      including fitness for a particular purpose and non-infringement.
+    </p>
 
-* Payments are handled through Apple App Store or Google Play
-* Subscription pricing and duration are shown before purchase
-* Subscriptions automatically renew unless canceled
+    <h2>10. Limitation of Liability</h2>
+    <p>
+      To the maximum extent permitted by law, ReceiptProof is not liable for indirect or consequential damages,
+      including missed deadlines, warranty disputes, or lost profits. Our total liability will not exceed the amount you paid
+      for the App in the past 12 months (if any).
+    </p>
 
-### 4. No Retailer Affiliation
+    <h2>11. Termination</h2>
+    <p>
+      You may stop using the App at any time. We may suspend or terminate access if you violate these Terms or if required by law.
+    </p>
 
-ReceiptProof is not affiliated with retailers, manufacturers, or warranty providers. Receipt acceptance is determined solely by the seller.
+    <h2>12. Privacy</h2>
+    <p>
+      Your use of the App is also governed by our <a href="./privacy.html">Privacy Policy</a>.
+    </p>
 
-### 5. Data Accuracy Disclaimer
+    <h2>13. Contact</h2>
+    <p>
+      If you have any questions about these Terms, contact:<br/>
+      <a href="mailto:leonitkuleta@gmail.com">leonitkuleta@gmail.com</a>
+    </p>
+  </main>
 
-We do not guarantee:
+  <footer>
+    <p>© <span id="y"></span> ReceiptProof. All rights reserved.</p>
+  </footer>
 
-* That reminders will prevent missed deadlines
-* That stored receipts will be accepted by merchants
-  Users remain responsible for validating return and warranty policies.
-
-### 6. Prohibited Use
-
-You may not:
-
-* Upload illegal or infringing content
-* Abuse or interfere with the App’s infrastructure
-* Use the App for commercial resale
-
-### 7. Service Availability
-
-We may update, suspend, or discontinue features without notice.
-
-### 8. Termination
-
-We may suspend access for violations of these terms.
-
-### 9. Changes
-
-We may update these Terms from time to time. Continued use constitutes acceptance.
-
-### 10. Contact
-
-Questions? Contact us at:
-**[leonitkuleta@gmail.com](leonitkuleta@gmail.com)**
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
