--- a/eula.html
+++ b/eula.html
@@ -24,7 +24,7 @@
     <h1>End User License Agreement (EULA)</h1>
     <p class="meta">
       Product: <strong>ReceiptProof</strong><br/>
-      Last updated: <strong>[Insert Date]</strong>
+      Last updated: <strong>January 19, 2026</strong>
     </p>
     <div class="card">
       This EULA governs your use of the ReceiptProof App. If the Store provides a standard EULA, it may also apply.
