--- a/restore.html
+++ b/restore.html
@@ -24,7 +24,7 @@
     <h1>Restore Purchases</h1>
     <p class="meta">
       Product: <strong>ReceiptProof</strong><br/>
-      Last updated: <strong>[Insert Date]</strong>
+      Last updated: <strong>January 19, 2026</strong>
     </p>
     <div class="card">
       If you purchased ReceiptProof premium features via Apple App Store or Google Play, you can restore them without paying again.
