--- a/terms.html
+++ b/terms.html
@@ -24,7 +24,7 @@
     <h1>Terms & Conditions</h1>
     <p class="meta">
       Product: <strong>ReceiptProof</strong><br/>
-      Last updated: <strong>[Insert Date]</strong>
+      Last updated: <strong>January 19, 2026</strong>
     </p>
     <div class="card">
       <strong>Important:</strong> ReceiptProof helps you store receipts and track deadlines, but you remain responsible for verifying
